erDiagram
    USER ||--o{ FARM : owns
    USER ||--o{ ORDER : places
    FARM ||--o{ PRODUCT : "offers"
    FARM ||--o{ ORDER : "receives"
    PRODUCT ||--o{ DAILY_CAPACITY : "has capacity per day"
    PRODUCT ||--o{ ORDER_ITEM : "included in"
    ORDER ||--o{ ORDER_ITEM : contains
    ORDER ||--o{ PAYMENT : has
    USER ||--o{ FAVORITE : marks
    PRODUCT ||--o{ FAVORITE : is_favorited

    USER {
        int id PK
        varchar username
        varchar email
        varchar password_hash
        bool is_active
        datetime date_joined
        varchar role  "CONSUMER or FARM_OWNER (via group/profile)"
    }

    FARM {
        int id PK
        int owner_id FK "references USER.id"
        varchar name
        varchar location
        text description
        datetime created_at
    }

    PRODUCT {
        int id PK
        int farm_id FK "references FARM.id"
        varchar name
        text description
        numeric price
        varchar unit "e.g. liter, kg"
        bool is_active
    }

    DAILY_CAPACITY {
        int id PK
        int product_id FK "references PRODUCT.id"
        date date
        numeric max_quantity
        numeric reserved_quantity
    }

    ORDER {
        int id PK
        int consumer_id FK "references USER.id"
        int farm_id FK "references FARM.id"
        varchar status "PENDING, CONFIRMED, ..."
        numeric total_amount
        datetime created_at
        datetime updated_at
    }

    ORDER_ITEM {
        int id PK
        int order_id FK "references ORDER.id"
        int product_id FK "references PRODUCT.id"
        numeric quantity
        numeric unit_price
    }

    PAYMENT {
        int id PK
        int order_id FK "references ORDER.id"
        varchar provider "moyasar"
        varchar provider_payment_id
        varchar status "INITIATED, PAID, FAILED, REFUNDED"
        numeric amount
        datetime created_at
    }

    FAVORITE {
        int id PK
        int consumer_id FK "references USER.id"
        int product_id FK "references PRODUCT.id"
    }
